--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <br>
     <br>
     <form>
-      <input type="date" id="irldate" name="Enter IRL Date">
-      <input type="button" value="Submit" onClick="testResults(this.form)">
+      <input type="date" id="irldate" name="Enter IRL Date" onChange="testResults(this.form)">
 
     </form>
 
